CHANGES - 10/13/2005
--------------------

CHANGES IN Mini-XML 2.3

	- The mxmldoc program now supports "@since version@" and
	  "@deprecated@" comments.
	- Fixed function and enumeraion type bugs in mxmldoc.
	- Fixed XML schema for mxmldoc.
	- The mxmldoc program now supports --title and --intro
	  options.
	- The mxmlLoad*() functions could leak a node on an error
	  (STR #27)
	- The mxml_vsnprintf() function could get in an infinite
	  loop on a buffer overflow (STR #25)
	- Added new mxmlNewCDATA() and mxmlSetCDATA() functions
	  to create and set CDATA nodes, which are really just
	  special element nodes.
	- Added new MXML_IGNORE type and MXML_IGNORE_CB callback
	  to ignore non-element nodes (i.e. whitespace)
	- mxmlLoad*() crashed when reporting an error in some
	  invalid XML (STR #23)


CHANGES IN Mini-XML 2.2.2

	- mxmlLoad*() did not treat custom data as opaque, so
	  whitespace characters would be lost.


CHANGES IN Mini-XML 2.2.1

	- mxmlLoadFd(), mxmlLoadFile(), and mxmlLoadString() now
	  correctly return NULL on error (STR #21)
	- mxmlNewInteger(), mxmlNewOpaque(), mxmlNewReal(),
	  mxmlNewText(), and mxmlNewTextf() incorrectly required
	  a parent node (STR #22)
	- Fixed an XML output bug in mxmldoc.
	- The "make install" target now uses the install command
	  to set the proper permissions on UNIX/Linux/OSX.
	- Fixed a MingW/Cygwin compilation problem (STR #18)


CHANGES IN Mini-XML 2.2

	- Added shared library support (STR #17)
	- mxmlLoad*() now returns an error when an XML stream
	  contains illegal control characters (STR #10)
	- mxmlLoad*() now returns an error when an element
	  contains two attributes with the same name in
	  conformance with the XML spec (STR #16)
	- Added support for CDATA (STR #14, STR #15)
	- Updated comment and processing instruction handling -
	  no entity support per XML specification.
	- Added checking for invalid comment termination ("--->"
	  is not allowed)


CHANGES IN Mini-XML 2.1
